# NoisyBeauty

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
NoiseTransformer/: NoiseTransformer.hpp
